--- a/CoolBooks/Views/Home/Donate.cshtml
+++ b/CoolBooks/Views/Home/Donate.cshtml
@@ -1,10 +1,10 @@
 ﻿@{
     ViewBag.Title = "Donate";
 }
-<h2>@ViewBag.Title.</h2>
+<h2>@ViewBag.Title</h2>
 <h3>
     The CoolBooks application is a free service and contains no advertising. For us to be able to develop and maintain the application, we are dependent on donations.
-    Our average user is donating 1 BTC per month. But, you are much welcome to donate more. Of course this is optional, but as this is a very useful service you should consider to donate. If you are using our service a lot and don't donate anything, don't be surprised if our deamon from hell will come and visit you.
+    Our average user is donating 1 BTC per month. But, you are much welcome to donate more. Of course this is optional, but as this is a very useful service you should consider to donate. If you are using our service a lot and don't donate anything, don't be surprised if our demon from hell will come and visit you.
     <br />
     <br />
     Please send your donations to this bitcoin address: <strong>1ssPqH8DYUPwKuqkWiZWLqzRQE4uavAch</strong>
