--- a/CoolBooks/Views/Books/Index.cshtml
+++ b/CoolBooks/Views/Books/Index.cshtml
@@ -9,7 +9,10 @@
 </head>
 <body>
     <p>
-        @Html.ActionLink("Create New", "Create", new { id = string.Empty }, new { @class = "btn btn-primary " })
+        @if (CoolBooks.Controllers.HomeController.IsLoggedIn(Session))
+        {
+            @Html.ActionLink("Create New", "Create", new { id = string.Empty }, new { @class = "btn btn-primary " })
+        }
     </p>
     <table class="table table-striped" border="0">
         <tr>
@@ -23,47 +26,47 @@
         </tr>
 
 
-            @foreach (var item in Model)
-    {
-        <tr class="table table-striped">
-            <td>
-                <img src=@item.ImagePath alt="Image not Available" width="100" height="100" />
-            </td>
-            <td class="table-striped">
-                @Html.DisplayFor(modelItem => item.Title)
-            </td>
+        @foreach (var item in Model)
+        {
+            <tr class="table table-striped">
+                <td>
+                    <img src=@item.ImagePath alt="Image not Available" width="100" height="100" />
+                </td>
+                <td class="table-striped">
+                    @Html.DisplayFor(modelItem => item.Title)
+                </td>
 
 
-            <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Description)
+                </td>
 
 
-            <td>
-                @Html.DisplayFor(modelItem => item.ISBN)
-            </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ISBN)
+                </td>
 
-            <td>
-                @Html.DisplayFor(modelItem => item.Genres.Name) @* Changed ICollection to Genres Genre *@
-            </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Genres.Name) @* Changed ICollection to Genres Genre *@
+                </td>
 
-            <td>
-                @Html.DisplayFor(modelItem => item.Authors.FirstName)
-                
-            </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Authors.FirstName)
 
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "btn btn-primary " })
-            </td>
-            <td>
-                @Html.ActionLink("View", "Details", new { id = item.Id }, new { @class = "btn btn-primary " })
-            </td>
-            <td>
-                @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new { @class = "btn btn-primary" })
-            </td>
-        </tr>
+                </td>
+
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "btn btn-primary " })
+                </td>
+                <td>
+                    @Html.ActionLink("View", "Details", new { id = item.Id }, new { @class = "btn btn-primary " })
+                </td>
+                <td>
+                    @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new { @class = "btn btn-primary" })
+                </td>
+            </tr>
         }
 
-                    </table>
-        </body>
-        </html>
+    </table>
+</body>
+</html>
