--- a/CoolBooks/Views/Home/About.cshtml
+++ b/CoolBooks/Views/Home/About.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-<h2>@ViewBag.Title.</h2>
+<h2>@ViewBag.Title</h2>
 <h3>@ViewBag.Message</h3>
 
 <p>Our logo has a demon from hell in it.</p>
