--- a/CoolBooks/Views/Home/Noaccess.cshtml
+++ b/CoolBooks/Views/Home/Noaccess.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewBag.Title = "NO ACCESS";
 }
-<h2>@ViewBag.Title.</h2>
+<h2>@ViewBag.Title</h2>
 <h3>@ViewBag.Message</h3>
 
 <p>There is no access to this page as you're not logged in.</p>
