--- a/CoolBooks/Views/Shared/_Layout.cshtml
+++ b/CoolBooks/Views/Shared/_Layout.cshtml
@@ -26,27 +26,30 @@
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Donate", "Donate", "Home")</li>
-                    @if (@Session["UserInfo"] != null)
+                    @if (CoolBooks.Controllers.HomeController.IsLoggedIn(Session))
                     {
                         <li>@Html.ActionLink("Profile", "Profile", "Users")</li>
                     }
-                    @if (@Session["UserInfo"] == null)
+                    @if (!CoolBooks.Controllers.HomeController.IsLoggedIn(Session))
                     {
                         <li>@Html.ActionLink("Sign up", "SignUp", "AspNetUsers")</li>
                     }
-                    @if (@Session["UserInfo"] == null)
+                    @if (!CoolBooks.Controllers.HomeController.IsLoggedIn(Session))
                     {
                         <li>@Html.ActionLink("Log in", "LogIn", "Home")</li>
                     }
-                    @if (@Session["UserInfo"] != null)
+                    @if (CoolBooks.Controllers.HomeController.IsLoggedIn(Session))
                     {
                         <li>@Html.ActionLink("Log out", "LogOut", "Home")</li>
                     }
-                    <li>@Html.ActionLink("Books", "Index", "Books")</li>
-                    <li>@Html.ActionLink("Authors", "Create", "Authors")</li>
-                    <li>@Html.ActionLink("Genres", "Create", "Genres")</li>
+                    @if (CoolBooks.Controllers.HomeController.IsAdmin(Session))
+                    {
+                        <li>@Html.ActionLink("Books", "Index", "Books")</li>
+                        <li>@Html.ActionLink("Authors", "Create", "Authors")</li>
+                        <li>@Html.ActionLink("Genres", "Create", "Genres")</li>
+                    }
                     <li>@Html.ActionLink("Search", "Index", "Search")</li>
-                    @if (@Session["UserInfo"] != null)
+                    @if (CoolBooks.Controllers.HomeController.IsLoggedIn(Session))
                     {
                         <li>@Html.ActionLink("Logged in as: " + @Session["UserName"], null)</li>
                     }
@@ -56,7 +59,7 @@
     </div>
     <div class="container body-content">
         @RenderBody()
-        
+
         <footer>
             <p>&copy; @DateTime.Now.Year - CoolPeople Inc.</p>
         </footer>
